--- a/arthall/pom.xml
+++ b/arthall/pom.xml
@@ -53,6 +53,12 @@
 	    <version>1.2.3</version>
 	</dependency>
 	
+	<dependency>
+	    <groupId>javax.mail</groupId>
+	    <artifactId>mail</artifactId>
+	    <version>1.4.7</version>
+	</dependency>
+	
 	<!-- MyBatis 설정 -->
 	<dependency>
 	    <groupId>org.mybatis</groupId>
